[metadata]
description = A library for synthesizing and manipulating quantum circuits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boschmitt/tweedledum
author = Bruno Schmitt
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries
